# c82_robot

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
configs/c82_robot/: old_navigation.yaml  prev_navigation.yaml
launch/: LN_bringup.launch.py  LN_mapping.launch.py  LN_simulation.launch.py  bringup.launch.py  mapping.launch.py  navigation.launch.py  real.launch.py  simulation.launch.py
maps/: test_workshop.pgm  test_workshop.yaml
urdf/: c82realrobot.urdf
urdf/c82_robot/: c82_robot.urdf  real_c82_robot.urdf
